--- a/RoamAI/Views/Trip/CreateTrip.cshtml
+++ b/RoamAI/Views/Trip/CreateTrip.cshtml
@@ -134,7 +134,7 @@ else {
     <partial name="_LoadingMessage" />
 <div class="travel-plan-card">
     <div class="card-header">
-        <h2>Travel Planı Oluştur</h2>
+        <h2>Seyahat Planı Oluştur</h2>
     </div>
     <form method="post" asp-action="GetRecommendations" asp-controller="Trip">
         <div class="form-group row mb-3">
