--- a/RoamAI/Views/Welcome/Index.cshtml
+++ b/RoamAI/Views/Welcome/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="hero-section text-white text-center d-flex align-items-center justify-content-center" style="height: 100vh; background-image: url('/images/travel1.png'); background-size: cover; background-position: center; position: relative;">
     <div class="overlay"></div>
     <div class="hero-content">
-        <h1 class="display-4">RoamAI</h1>
+        <h1 class="display-4" style="font-size: 72px; font-family: 'Lobster', cursive;">RoamAI</h1>
         <p class="lead">Yapay Zeka Destekli Seyahat Önerileri ile Keşfet</p>
-        <a href="#about-div" class="btn btn-light btn-lg mt-3">Explore</a>
+        <a href="#about-div" class="btn btn-light btn-lg mt-3" >Keşfet</a>
     </div>
     <div class="scroll-down-indicator">
         <a href="#about-div"><img src="/images/scroll.png" alt="Scroll Down"></a>
@@ -209,6 +209,8 @@
         </div>
     </section>
 </div>
+
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
