--- a/RoamAI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RoamAI/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,11 +2,11 @@
 @model RegisterModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Kayıt Ol";
 }
 
-<div class="d-flex justify-content-center align-items-center" style="min-height: 95vh; background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/travel-background.png') no-repeat center center/cover;">
-    <div class="card shadow-lg" style="width: 100%; max-width: 500px; background-color: rgba(255, 255, 255, 0.7);">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 95vh; background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('/images/travel9.png') no-repeat center center/cover;">
+    <div class="card shadow-lg" style="width: 100%; max-width: 500px; background-color: rgba(255, 255, 255, 0.8);">
         <div class="card-header text-center">
             <h2>@ViewData["Title"]</h2>
         </div>
@@ -22,18 +22,18 @@
 
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" type="password" class="form-control" autocomplete="new-password" placeholder="password" />
-                    <label asp-for="Input.Password">Password</label>
+                    <label asp-for="Input.Password">Parola</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3">
                     <input asp-for="Input.ConfirmPassword" type="password" class="form-control" autocomplete="new-password" placeholder="confirm password" />
-                    <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                    <label asp-for="Input.ConfirmPassword">Parolayı Onayla</label>
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
 
                 <button id="registerSubmit" type="submit" class="btn btn-primary w-100 mb-3" style="font-size: 1.2rem; padding: 10px; border-radius: 5px;">
-                    Register
+                    Kayıt Ol
                 </button>
             </form>
         </div>
