--- a/RoamAI/Views/Shared/_LoadingMessage.cshtml
+++ b/RoamAI/Views/Shared/_LoadingMessage.cshtml
@@ -1,4 +1,5 @@
 ﻿<div class="loading" style="display: none;">
-    <img src="/images/Loading.gif" alt="Loading..." class="loading-gif" />
+    <img src="/images/loading5.gif" alt="Loading..." class="loading-gif" />
     <h1 id="loadingMessage">Yükleniyor...</h1>
 </div>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
