--- a/RoamAI/Views/Shared/_LoginPartial.cshtml
+++ b/RoamAI/Views/Shared/_LoginPartial.cshtml
@@ -32,11 +32,11 @@
 {
     <li class="nav-item">
         <a id="manage" class="nav-link btn btn-outline-primary custom-manage-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            Hello @UserManager.GetUserName(User)!
+            Merhaba @UserManager.GetUserName(User)
         </a>
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Welcome", new { area = "" })">
                 <button id="logout" type="submit" class="nav-link btn btn-outline-primary nav-link mx-1" style="width: 100px;">Çıkış Yap</button>
         </form>
     </li>
