--- a/RoamAI/wwwroot/css/site.css
+++ b/RoamAI/wwwroot/css/site.css
@@ -118,14 +118,23 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.5em;
     z-index: 9999;
+    text-align: center; 
 }
 
+    .loading h1 {
+        font-size: 1em; 
+        font-family: 'Poppins', sans-serif; 
+        font-weight: 600; 
+    }
+
+
+
 .loading-gif {
-    width: 100px; /* Adjust as needed */
-    height: 100px; /* Adjust as needed */
+    width: auto; 
+    height: auto; 
     margin-bottom: 20px;
 }
