--- a/RoamAI/Views/Trip/TripDetail.cshtml
+++ b/RoamAI/Views/Trip/TripDetail.cshtml
@@ -49,7 +49,12 @@
                         <p style="font-size: 23px;">@Model.Description</p>
 
                     </div>
-                <button id="playDescriptionAudio" class="btn btn-primary">Açıklamayı Dinle</button>
+                <div style="text-align: center;">
+                    <button id="playDescriptionAudio" class="btn btn-outline-primary" style="width: 25%; font-size: 1.2em; border-width: 2px;">
+                        Açıklamayı Dinle
+                    </button>
+                </div>
+
 
                 <div id="audioContainer" style="margin-top: 15px;">
                     <!-- Audio player burada dinamik olarak yüklenecek -->
